More alignment fixes

--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -148,7 +148,7 @@
 	.info-box {
 	  background-color: $primary-color;
 	  display: block;
-	  padding: 12px;
+	  padding: 21px 14px;
 	  color: white;
 	  overflow: hidden;
 	  margin-bottom: 24px;
